Bug 377653 - Default window size too small
Summary: Default window size too small
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_standard_actions (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-15 16:54 UTC by Michael D
Modified: 2020-04-19 23:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.5
Sentry Crash Report:


Attachments
Default window size of standard shortcuts module (40.65 KB, image/png)
2017-03-15 16:54 UTC, Michael D
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2017-03-15 16:54:56 UTC
Created attachment 104586 [details]
Default window size of standard shortcuts module

The default window size of the kcm shortcut modules is too small. I've attached a screenshot for "Standard Shortcuts'.
Comment 1 Nate Graham 2020-01-15 19:46:33 UTC
Patch: https://phabricator.kde.org/D26695
Comment 2 Michael D 2020-01-16 08:40:37 UTC
Great, thanks.
Comment 3 Nate Graham 2020-01-16 21:17:51 UTC
Sorry it took so long! I only saw this bug now while I was triaging all System Settings bugs.
Comment 4 Michael D 2020-01-16 21:29:30 UTC
Was a papercut, so no big deal.

After having had a quick look at the phabricator discussion, I am surprised there is no way to set default window size based on screen resolution. I anyway think setting a low non-relative minimum is fine, but was still surprised.
Comment 5 Nate Graham 2020-04-19 22:46:27 UTC
Fixed by https://cgit.kde.org/plasma-desktop.git/commit/?id=8e0f525a96331102cdb3d20aadbc4cd8508e5146 (not sure why the bug didn't get closed automatically)
Comment 6 Nate Graham 2020-04-19 23:45:51 UTC
Git commit 8e0f525a96331102cdb3d20aadbc4cd8508e5146 by Nate Graham.
Committed on 19/04/2020 at 22:43.
Pushed by ngraham into branch 'Plasma/5.18'.

[KCMs/Standard Actions] Give KCMShell window a sane default size

Summary:
FIXED-IN: 5.18.5

Test Plan:
Before: {F7884930}
After: {F7884929}

Reviewers: #plasma

Subscribers: cfeck, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26695

M  +3    -0    kcms/standard_actions/standard_actions_module.cpp

https://commits.kde.org/plasma-desktop/8e0f525a96331102cdb3d20aadbc4cd8508e5146