[KCMs/Standard Actions] Give KCMShell window a sane default size

Summary:
BUG: 377653
FIXED-IN: 5.18.5

Test Plan:
Before: {F7884930}
After: {F7884929}

Reviewers: #plasma

Subscribers: cfeck, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26695